Update README.md and logstash plugin config

--- a/sfdc_elf.config
+++ b/sfdc_elf.config
@@ -1,32 +1,29 @@
 input {  
     sfdc_elf {
-        # Manditory fields -----------------------------
+        # === Required Fields ===
         
         # Input the username and password of your Force.com organization.
-        # username       => ""
-        # password       => ""
+        username       => ""
+        password       => ""
 
         # Id & Secret are values that are generated when you create a "Connected App."
-        # Follow these instructions to create a connected app and get the Id & Secret. 
-        # Link: https://docs.google.com/document/d/19bhMJG7NK5pz0j3YTc8KbwJsrS0QtQB-FRQEQd20Mnw/edit
-        # client_id      => ""
-        # client_secret  => ""
+        client_id      => ""
+        client_secret  => ""
 
         
-        # Optional fields -----------------------------
-
+        # === Optional Fields ===
         # Only needed when your Force.com organization requires it.
         # security_token => ""
 
         # The host to use for OAuth2 authentication.
         # host           => ""
 
-        # The path to be use to store the .sfdc_info_logstash state persistor file. You set the path 
+        # The path to be use to store the .sfdc_info_logstash state persistor file. You set the path
         # like so, `~/SomeDirectory` Paths must be absolute and cannot be relative.
         # path           => ""
 
         # Specify how often the plugin should grab new data in terms of minutes.
-        # poll_interval_in_minutes => 
+        # poll_interval_in_minutes => 10
 
     }
 }
