Update comments in sfdc_elf.config file to make it easier for users to understand.

--- a/sfdc_elf.config
+++ b/sfdc_elf.config
@@ -11,19 +11,27 @@ input {
         client_secret  => ""
 
         
-        # === Optional Fields ===
+        # === OPTIONAL FIELDS ===
+        # Leave these fields commented out (with '#') if the config does not apply to you. Some of the fields 
+        # have default values
+        
         # Only needed when your Force.com organization requires it.
         # security_token => ""
 
-        # The host to use for OAuth2 authentication.
-        # host           => ""
-
         # The path to be use to store the .sfdc_info_logstash state persistor file. You set the path
-        # like so, `~/SomeDirectory` Paths must be absolute and cannot be relative.
+        # like so, '~/SomeDirectory' Paths must be absolute and cannot be relative.
+        # Defaults to your home directory '~/'.
         # path           => ""
 
         # Specify how often the plugin should grab new data in terms of minutes.
-        # poll_interval_in_minutes => 10
+        # Defaults to 1440 minutes (1 day). We recommend keeping it at 1 day.
+        # poll_interval_in_minutes => 60
+        
+        # The host to use for OAuth2 authentication. 
+        # Only required in rare occassions where you are not using the standard host for OAuth authentication.
+        # For instance, local development environment by internal Salesforce developers. Most users need not 
+        # fill this and can leave it commented out.
+        # host           => ""
 
     }
 }
