Updated sfdc_elf.config file with details to connect to production and sandbox instances.

--- a/sfdc_elf.config
+++ b/sfdc_elf.config
@@ -19,8 +19,8 @@ input {
         # security_token => ""
 
         # The path to be use to store the .sfdc_info_logstash state persistor file. You set the path
-        # like so, '~/SomeDirectory' Paths must be absolute and cannot be relative.
-        # Defaults to your home directory '~/'.
+        # like so, "~/SomeDirectory" Paths must be absolute and cannot be relative.
+        # Defaults to your home directory "~/".
         # path           => ""
 
         # Specify how often the plugin should grab new data in terms of minutes.
@@ -28,9 +28,8 @@ input {
         # poll_interval_in_minutes => 60
         
         # The host to use for OAuth2 authentication. 
-        # Only required in rare occassions where you are not using the standard host for OAuth authentication.
-        # For instance, local development environment by internal Salesforce developers. Most users need not 
-        # fill this and can leave it commented out.
+        # Defaluts to "https://login.salesforce.com".
+        # Use "https://test.salesforce.com" for connecting to Sandbox instances.
         # host           => ""
 
     }
