Fix host configuration in sfdc_elf.config

--- a/sfdc_elf.config
+++ b/sfdc_elf.config
@@ -28,8 +28,8 @@ input {
         # poll_interval_in_minutes => 60
         
         # The host to use for OAuth2 authentication. 
-        # Defaluts to "https://login.salesforce.com".
-        # Use "https://test.salesforce.com" for connecting to Sandbox instances.
+        # Defaluts to "login.salesforce.com".
+        # Use "test.salesforce.com" for connecting to Sandbox instance.
         # host           => ""
 
     }
